--- a/main.html
+++ b/main.html
@@ -1,16 +1,72 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>HTML Assignment 3</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <h1 style="text-align: center;">HTML Assignment #3</h1>
 
+  <!-- Table 1 -->
+  <table id="table-1" class="middle">
+    <tr>
+      <td id="t11">Cell 1</td>
+      <td id="t12">Cell 2</td>
+      <td id="t13" class="right">Cell 3</td>
+    </tr>
+    <tr class="center">
+      <td>Cell 4</td>
+      <td>Cell 5</td>
+      <td class="right">Cell 6</td>
+    </tr>
+    <tr>
+      <td>Cell 7</td>
+      <td>Cell 8</td>
+      <td class="right">Cell 9</td>
+    </tr>
+  </table>
+  <br>
+
+  <!-- Table 2 -->
+  <table id="table-2" class="middle">
+    <tr>
+      <td id="t21" colspan="6">Header Cell Spanning 6 Columns</td>
+    </tr>
+    <tr>
+      <td>R2C1</td><td>R2C2</td><td>R2C3</td><td>R2C4</td><td>R2C5</td><td>R2C6</td>
+    </tr>
+    <tr>
+      <td>R3C1</td><td>R3C2</td><td>R3C3</td><td>R3C4</td><td>R3C5</td><td>R3C6</td>
+    </tr>
+    <tr>
+      <td>R4C1</td><td>R4C2</td><td>R4C3</td><td>R4C4</td><td>R4C5</td><td>R4C6</td>
+    </tr>
+    <tr>
+      <td>R5C1</td><td>R5C2</td><td>R5C3</td><td>R5C4</td><td>R5C5</td><td>R5C6</td>
+    </tr>
+    <tr>
+      <td>R6C1</td><td>R6C2</td><td>R6C3</td><td>R6C4</td><td>R6C5</td><td>R6C6</td>
+    </tr>
+  </table>
+  <br>
+
+  <!-- Table 3 -->
+  <table id="table-3" class="middle">
+    <tr class="green">
+      <td>Green Row 1 - Col 1</td>
+      <td>Green Row 1 - Col 2</td>
+      <td>Green Row 1 - Col 3</td>
+    </tr>
+    <tr>
+      <td>Normal</td>
+      <td id="t-image"><img src="https://images.unsplash.com/photo-1505028106030-e07ea1bd80c3?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDR8fHNvZnR3YXJlJTIwZGV2ZWxvcG1lbnQlMjBjYXJlZXIlMjBwYXRofGVufDB8fHx8MTY3MjMwNDEyNg&ixlib=rb-4.0.3&q=80&w=2000" alt="Sample Image"></td>
+      <td>Normal</td>
+    </tr>
+    <tr class="blue">
+      <td>Blue Row - Col 1</td>
+      <td>Blue Row - Col 2</td>
+      <td>Blue Row - Col 3</td>
+    </tr>
+  </table>
 </body>
-
 </html>
