--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Assignment 3</title>
+	
 </head>
 <body>
   <h1 style="text-align: center;">HTML Assignment #3</h1>
@@ -11,7 +12,7 @@
   <table id="table-1" class="middle">
     <tr>
       <td id="t11">Cell 1</td>
-      <td id="t12">Cell 2</td>
+      <td id="t12" class="center">Cell 2</td>
       <td id="t13" class="right">Cell 3</td>
     </tr>
     <tr class="center">
