--- a/main.html
+++ b/main.html
@@ -3,7 +3,40 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Assignment 3</title>
-	
+	 <style>
+    table.middle {
+      border: 1px solid rgb(0, 0, 0);
+      border-spacing: 1px;
+      padding: 1px;
+    }
+
+    table.middle td,
+    table.middle th {
+      border: 1px solid rgb(0, 0, 0);
+      padding: 10px;
+    }
+
+    .center {
+      text-align: center;
+    }
+
+    .right {
+      text-align: right;
+    }
+
+    .green {
+      background-color: green;
+    }
+
+    .blue {
+      background-color: blue;
+    }
+
+    #t-image img {
+      width: 50px;
+      height: 50px;
+    }
+  </style>
 </head>
 <body>
   <h1 style="text-align: center;">HTML Assignment #3</h1>
